# fit_izp_1bit_setcal

./: .gitignore  CMakeLists.txt  Makefile  README.md  setcal.c  sets.txt
utils/: functions.c  functions.h  loader.c  loader.h  parser.c  parser.h  types.c  types.h
